- Cleaned up auto-generating attributes and project. -m All Elements auto-generating helpers.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,7 +2,19 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": ".NET Core Launch (console)",
+            "name": "Debug Utils Project",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "build",
+            "program": "${workspaceRoot}/Utils/bin/Debug/netcoreapp1.1/Utils.dll",
+            "args": ["elements", "-s"],
+            "cwd": "${workspaceRoot}",
+            "externalConsole": false,
+            "stopAtEntry": false,
+            "internalConsoleOptions": "openOnSessionStart"
+        },
+        {
+            "name": "Debug Test Project",
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
